vlib/v/checker/tests/map_result_callback_fn_err.out
vlib/v/checker/tests/map_result_callback_fn_err.vv:13:13: notice: unused parameter: `cmd`
   11 | }
   12 | 
   13 | fn execsync(cmd cli.Command) ! {
      |             ~~~
   14 |     dens := os.read_lines('/etc/fox/dens')!.map(urllib.parse(it)!)
   15 |     mut threads := []thread !{}
vlib/v/checker/tests/map_result_callback_fn_err.vv:19:17: error: cannot use Result type in `map`
   17 |         threads << spawn update(den)
   18 |     }
   19 |     threads.map(it.wait()!)
      |                    ~~~~~~~
   20 | }
   21 |
